# cpp-battery-optimizer

./: Batteries.csv  CMakeLists.txt  README.md  test_optimizer.py
Main folder/: Battery.h  BatteryInventory.h  BatteryPack.h  DataHandler.h  Main.cpp  PackManager.h  ParallelGroup.h
Main folder/Functions/: Capacity algorithms.cpp  Capacity algorithms.h  Input and Output.cpp  Input and Output.h  Packing Algorithms.cpp  Packing Algorithms.h
