# Tell CMake exactly where your new files live
add_executable(C_BatteryPackOptimizer
        "Main folder/Main.cpp"
        "Main folder/Battery.h"
        "Main folder/BatteryInventory.h"
        "Main folder/DataHandler.h"
        "Main folder/PackManager.h"
        "Main folder/ParallelGroup.h"
)